--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,15 @@
 ---
+
   - name: Create group role & GID {{ guser }}
-    group: name={{ guser }} state=present gid={{ guser_guid }}
+    group: name={{ project_user }} state=present gid={{ project_user_guid }}
 
   - name: Create user role & UID
-    user: home={{ guser_home }} name={{ guser }} state=present shell=/bin/bash uid={{ guser_guid }} group={{ guser }}
+    user: home={{ project_user_home }} name={{ project_user }} state=present shell=/bin/bash uid={{ project_user_guid }} group={{ project_user }}
 
   - name: SSH key deployment for galaxy user
-    authorized_key: user={{ guser }} key="{{ item }}"
+    authorized_key: user={{ project_user }} key="{{ item }}"
     with_file:
       - ~/.ssh/id_rsa.pub
 
   - name: Update mode to the project directory
-    file: group={{ guser }} owner={{ guser }} mode=755 state=directory path={{ guser_home }}
+    file: group={{ project_user }} owner={{ project_user }} mode=755 state=directory path={{ project_user_home }}
