Rename again project_user to user (to avoid clash with main sets)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 
-project_user: galaxy
-project_user_guid: 512
-project_user_home: /home/galaxy
+user: galaxy
+user_guid: 512
+user_home: /home/galaxy
